[package]
name = "ledcat"
description = "Control lots of LED's over lots of protocols"
version = "0.1.5"
edition = "2018"
repository = "https://github.com/polyfloyd/ledcat"
authors = ["polyfloyd <floyd@polyfloyd.net>"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["leds", "led-strips", "artnet", "ws2812b"]
categories = ["command-line-utilities", "embedded", "hardware-support"]

[badges]
travis-ci = { repository = "polyfloyd/ledcat", branch = "master" }

[features]
default = []
rpi-led-matrix = [ "librgbmatrix-sys" ]

[dependencies]
byteorder = "1"
clap = "2"
gpio = "0.4"
librgbmatrix-sys = { version = "0.1", optional = true }
net2 = "0.2"
nix = "0.17"
regex = "1"

[dev-dependencies]
assert_cli = "0.6"
rand = "0.7"
tempfile = "3"
